--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -68,6 +68,12 @@ $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
 
+@mixin button-sm() {
+  @include button-menu();
+  padding: 0 16px;
+  height: 32px;
+}
+
 @mixin card($card-color) {
   width: 300px;
   height: 300px;
