--- a/src/Components/index.scss
+++ b/src/Components/index.scss
@@ -10,6 +10,7 @@ $color-primary-hover: #6f9dc8;
 $color-secondary: #6a8cb5;
 $color-tertiary: #23b54d;
 $color-error: #ef4444;
+$color-warning: #fcd34d;
 
 //shadow variables
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -72,6 +73,29 @@ $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   @include button-menu();
   padding: 0 16px;
   height: 32px;
+}
+
+@mixin icon-button($btn-clr: black) {
+  @include button;
+
+  padding: 12px;
+  background: none;
+  box-shadow: none;
+  width: 48px;
+  height: 48px;
+  transition: all 150ms;
+
+  svg {
+    stroke: $btn-clr;
+  }
+
+  &:hover {
+    background: $btn-clr;
+
+    svg {
+      stroke: white;
+    }
+  }
 }
 
 @mixin card($card-color) {
