--- a/src/Components/Routines/routines.scss
+++ b/src/Components/Routines/routines.scss
@@ -1,90 +1,162 @@
 @import "../index.scss";
 
-.routines-container {
-  display: flex;
-  flex-direction: row;
-  margin: 20px auto;
-  gap: 10px;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 90%vw;
-  height: auto;
+.routines {
+  &__topbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 30px;
+  }
 
-  .routine-preview {
-    width: 300px;
-    height: 300px;
-    background-color: $color-primary;
-    text-align: center;
-    border-radius: 10px;
-    margin: 20px 0;
-    box-shadow: 10px 8px 0px $color-primary-hover;
-    transition-property: box-shadow;
-    transition-duration: 0.5s;
+  &__topbar-left {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
 
-    &:hover {
-      color: rgb(61, 79, 88);
-      background-color: $color-primary-hover;
-      border: 1px solid rgb(93, 108, 116);
-      box-shadow: rgb(0 0 0 / 30%) 0px 4px 4px, rgb(231 238 236) 0px 0px 0px 3px;
+  &__header {
+    font-weight: 400;
+  }
+
+  &__routines-count {
+    background-color: rgb(24, 24, 24);
+    border-radius: 9999px;
+    padding: 4px 8px;
+    color: white;
+    font-size: 12px;
+  }
+
+  &__add-routine-btn {
+    @include button;
+  }
+
+  &__routines {
+    padding: 16px 30px;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  &__routine {
+    @include card($color-background);
+
+    padding: 0;
+    width: 100%;
+    border-radius: 8px;
+    display: flex;
+
+    &--no-stretches {
+      padding: 12px 16px;
+      background: $color-warning;
+      color: black;
+      border-radius: 4px;
+      font-size: 16px;
+      margin: 16px;
+    }
+  }
+
+  &__routine-left {
+    display: flex;
+    flex: 0 1 300px;
+    flex-wrap: wrap;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    overflow: hidden;
+  }
+
+  &__routine-middle {
+    flex: 2;
+  }
+
+  &__routine-middle-content {
+    padding: 24px;
+  }
+
+  &__routine-right {
+    flex: 1;
+    background: $color-primary;
+    display: flex;
+    flex-direction: column;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+
+  &__routine-stretch-image {
+    min-width: 150px;
+    height: 50%;
+    flex: 1;
+    object-fit: cover;
+  }
+
+  &__routine-topbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 24px;
+    background: $color-primary;
+  }
+
+  &__routine-name {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  &__routine-notes {
+    font-size: 16px;
+    margin-bottom: 16px;
+  }
+
+  &__routine-link {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 16px;
+    color: rgb(24, 24, 24);
+    svg {
+      width: 24px;
+      height: 24px;
+      transition: transform 150ms;
     }
 
-    .routine-card {
-      position: relative;
-      height: 100%;
-
-      * {
-        text-decoration: none;
-        color: black;
-      }
-      .remove-routine {
-        @include button;
-        position: absolute;
-        bottom: 3%;
-        margin: 10px auto;
-        right: 25%;
-        height: 40px;
-        width: 150px;
-        font-size: 12pt;
-      }
-
-      .routine-info {
-        h2 {
-          margin-top: 10px;
-          font-size: 20pt;
-          font-family: $font-title;
-          letter-spacing: 2px;
-          font-weight: 700;
-        }
-
-        img {
-          width: 200px;
-          height: 200px;
-        }
-
-        h3 {
-          font-size: 14pt;
-          font-family: $font-title;
-          font-weight: 400;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          display: -webkit-box;
-          -webkit-line-clamp: 4;
-          -webkit-box-orient: vertical;
-        }
+    &:hover {
+      transition: all 150px ease-in-out;
+      svg {
+        transform: translateX(5px);
       }
     }
   }
-}
 
-.add-routine {
-  display: flex;
-  justify-content: center;
-  button {
-   @include button;
-   margin: 10px auto;
-   height: 100px;
-   width: 400px;
-   font-size: 32pt;
+  &__remove-routine-btn {
+    @include icon-button($color-error);
+  }
+
+  &__stretches-title {
+    background: #c0ddff;
+    height: 96px;
+    padding: 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+    border-top-right-radius: 8px;
+  }
+
+  &__add-stretch-btn {
+    @include icon-button(rgb(24, 24, 24));
+  }
+
+  &__stretches-list {
+    border-bottom-right-radius: 8px;
+    padding: 24px;
+    list-style: none;
+    overflow-y: auto;
+  }
+
+  &__stretches-list-item {
+    font-size: 14px;
   }
 }
