--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -1,5 +1,5 @@
-@use '../index.scss';
-@import '../index.scss';
+@use "../index.scss";
+@import "../index.scss";
 
 .main-container {
   display: block;
@@ -43,7 +43,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('https://htpartners.com/wp-content/uploads/2017/07/iStock_000007946674Small.jpg');
+    background-image: url("https://htpartners.com/wp-content/uploads/2017/07/iStock_000007946674Small.jpg");
     filter: blur(8px);
     -webkit-filter: blur(2px);
     background-repeat: no-repeat;
@@ -52,6 +52,7 @@
   }
 
   .single-routine-container {
+    z-index: 8;
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
@@ -63,7 +64,7 @@
 
     //background image shadow
     box-shadow: inset 0 0 0 1000px rgba(137, 155, 170, 0.4);
-    background-image: url('https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
+    background-image: url("https://images.unsplash.com/photo-1533090161767-e6ffed986c88?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZW1wdHklMjBkZXNrfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
     background-position-y: 60%;
     background-repeat: no-repeat;
     background-size: 120%;
