--- a/src/Components/SingleStretch/singlestretch.scss
+++ b/src/Components/SingleStretch/singlestretch.scss
@@ -22,6 +22,13 @@
     align-items: center;
     padding-bottom: 20px;
     background-color: $color-primary;
+    background-image: url('https://wallpaper.dog/large/20361107.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    background-position: 20% 40%;
+    // backdrop-filter: ;
+    // background-position-x: 30%;
     width: 100%;
 
     img {
