--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -7,7 +7,7 @@
   // background-color: ie-hex-str($color: #000000);
   background: linear-gradient(hsla(137, 70%, 12%, 0.8), hsla(137, 68%, 52%, 0.8)), url("../../../public/about-background.jpg");
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
   background-position: center;
   overflow: hidden;
@@ -18,6 +18,7 @@
   .content{
     position: relative;
     text-align: center;
+    margin-bottom: 20px;
     h1{
       color: $color-background;
       margin-bottom: 10px;
@@ -30,13 +31,13 @@
       margin: 0 40px;
     }
     .creator-wrapper{
-      margin-top: 30px;
+      margin-top: 10px;
       justify-content: space-evenly;
       display: flex;
       flex-direction: row;
       height: auto;
       flex-wrap: wrap;
-      gap: 30px;
+      gap: 20px;
       // border-radius: ;
 
       .creator{
@@ -49,7 +50,7 @@
         padding: 28px 28px;
 
         h3{
-          margin-bottom: 20px;
+          margin-bottom: 10px;
           color: $color-tertiary;
           font-size: 36pt;
           font-weight: 600;
