--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -7,10 +7,10 @@
   // background-color: ie-hex-str($color: #000000);
   background: linear-gradient(hsla(137, 70%, 12%, 0.8), hsla(137, 68%, 52%, 0.8)), url("../../../public/about-background.jpg");
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 142px);
   background-size: cover;
   background-position: center;
-  overflow: hidden;
+  overflow: scroll;
   background-repeat: no-repeat;
   position: reltaive;
   justify-content: center;
@@ -18,6 +18,8 @@
   .content{
     position: relative;
     text-align: center;
+    // overflow: scroll;
+
     h1{
       color: $color-background;
       margin-bottom: 10px;
@@ -37,6 +39,7 @@
       height: auto;
       flex-wrap: wrap;
       gap: 30px;
+      // height: 300px;
       // border-radius: ;
 
       .creator{
