--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -7,10 +7,10 @@
   // background-color: ie-hex-str($color: #000000);
   background: linear-gradient(hsla(137, 70%, 12%, 0.8), hsla(137, 68%, 52%, 0.8)), url("../../../public/about-background.jpg");
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 142px);
   background-size: cover;
   background-position: center;
-  overflow: hidden;
+  overflow: scroll;
   background-repeat: no-repeat;
   position: reltaive;
   justify-content: center;
@@ -18,7 +18,7 @@
   .content{
     position: relative;
     text-align: center;
-    margin-bottom: 20px;
+
     h1{
       color: $color-background;
       margin-bottom: 10px;
@@ -31,13 +31,14 @@
       margin: 0 40px;
     }
     .creator-wrapper{
-      margin-top: 10px;
+      margin-top: 30px;
       justify-content: space-evenly;
       display: flex;
       flex-direction: row;
       height: auto;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 30px;
+      // height: 300px;
       // border-radius: ;
 
       .creator{
@@ -50,15 +51,15 @@
         padding: 28px 28px;
 
         h3{
-          margin-bottom: 10px;
+          margin-bottom: 20px;
           color: $color-tertiary;
           font-size: 36pt;
           font-weight: 600;
 
         }
         .headshot{
-          width: 250px;
-          height: 250px;
+          width: 300px;
+          height: 300px;
           border-radius: 48px;
           margin-bottom: 10px;
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
