--- a/src/Components/SingleRoutine/singleroutine.scss
+++ b/src/Components/SingleRoutine/singleroutine.scss
@@ -3,6 +3,7 @@
 
 .main-container {
   display: flex;
+  gap: 24px;
   flex-direction: column;
   // min-height: ;
 
@@ -157,8 +158,7 @@
     gap: 40px;
     height: auto;
     width: 100%;
-    margin: 10px;
-    padding: 10px;
+    padding: 16px 0;
     background-color: lightblue; // padding-top: 50px 0px;
     @include font-content();
 
